# shadot

./: Cargo.toml  default.toml
src/: config.rs  main.rs
