[package]
name = "shadot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
color-eyre = "0.6.3"
directories = "5.0.1"
figment = { version = "0.10.19", features = ["json", "yaml", "toml"] }
inquire = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }
